Fixed mobile spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -62,6 +62,10 @@ h4 {
     text-decoration: none;
 }
 
+.children-inline * {
+    display: inline-block;
+}
+
 /* #endregion */
 
 /* #region text stlyes */
@@ -111,7 +115,7 @@ h4 {
     position: relative;
     width: 24px;
     height: 24px;
-    margin: 18px 0 0 -8px;
+    margin: 18px 0 0 0;
 
     vertical-align: middle;
 }
